Tue Feb 17 10:45:59 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/syck/rubyext.c (syck_emitter_end_object): takes only one arg.

Tue Feb 17 07:48:21 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rexml/encodings/SHIFT_JIS: wrong library name.

Tue Feb 17 01:35:28 2004  Tanaka Akira  <akr@m17n.org>

	* eval.c (rb_eval): care that another thread replace NODE_DREGX_ONCE
	  to NODE_LIT.  [ruby-dev:22920]

Tue Feb 17 01:20:57 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb: new module FileUtils::DryRun.

Mon Feb 16 23:28:14 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/csv.rb: document reduction.  [ruby-core:02429]

	* test/yaml/test_yaml.rb: added 0..1 test with "0".."1" on display.
	  it should be defined that the specification about what kind of Range
	  is supported in ruby's custom type in YAML.

Mon Feb 16 22:22:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/generator.rb: corrected doc format
	* lib/rinda/rinda.rb: added documentation (from Hugh Sasse)
	* lib/rinda/tuplespace.rb: ditto

Mon Feb 16 20:28:52 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: show more warnings. (refering to mingw)

	* bcc32/setup.mak: ditto.

Mon Feb 16 18:35:58 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.status): should create *.pdb on ext/,
	  not .ext/.

	* win32/Makefile.sub (config.status): convert the name of import
	  library.

	* lib/mkmf.rb (create_makefile): now don't need to remove
	  $(TARGET).lib.

Mon Feb 16 15:45:22 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check functions, fork spawnv.

	* io.c (rb_io_s_popen): accept argv not only single command line.

	* process.c (rb_proc_exec_n): export.

	* process.c (rb_check_argv): check if arguments are safe to invoke.

	* process.c (rb_fork): retry to fork.

	* process.c (rb_spawn): spawn child process asynchronously.

	* process.c (rb_f_system): raise an exception if the command could not
	  execute.
