@@ -1,9 +1,9 @@
 require "rexml/document"
 require "rexml/streamlistener"
 
-/\A(\d+)\.(\d+).\d+\z/ =~ REXML::Version
-if $1.to_i < 2 or ($1.to_i == 2 and $2.to_i < 5)
-	raise LoadError
+/\A(\d+)\.(\d+)(?:.\d+)+\z/ =~ REXML::Version
+if ([$1.to_i, $2.to_i] <=> [2, 5]) < 0
+	raise LoadError, "needs REXML 2.5 or later (#{REXML::Version})"
 end
 
 module RSS
